<resources>
    <string name="app_name">Proyecto nativo en Java</string>
    <string name="textview_text_title">Primer proyecto nativo</string>
    <string name="edittext_hint_valuefirst">Ingrese un número</string>
    <string name="edittext_hint_valuesecond">Ingrese un segundo número</string>
    <string name="button_add_text">Sumar</string>
    <string name="button_subtract_text">Restar</string>
    <string name="button_multiply_text">Multiplicar</string>
    <string name="button_factorial_text">Factorial</string>
    <string name="button_pow_text">Potencia</string>

    <string name="button_showactivity_text">Mostrar activity</string>

    <string name="button_finish_text"> Finalizar</string>

</resources>