<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_text_title"
        android:textAlignment="center"
        android:textColor="#009688"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/editTextValueFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edittext_hint_valuefirst"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="SpeakableTextPresentCheck,VisualLintTextFieldSize"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextValueSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edittext_hint_valuesecond"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="add"
        android:text="@string/button_add_text"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/buttonSubtract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="subtract"
        android:text="@string/button_subtract_text"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_multiply_text"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/buttonFactorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="factorial"
        android:text="@string/button_factorial_text"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/buttonPow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="pow"
        android:text="@string/button_pow_text"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="ShowActivity"
        android:text="@string/button_showactivity_text" />

</LinearLayout>